--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -30,7 +30,24 @@
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"/>
+          app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="146dp">
+
+                  <TextView
+                      android:id="@+id/textView4"
+                      android:layout_width="186dp"
+                      android:layout_height="52dp"
+                      android:layout_marginStart="16dp"
+                      android:layout_marginTop="76dp"
+                      android:text="@string/Welcome_txt"
+                      android:textSize="20sp"
+                      app:layout_constraintStart_toStartOf="parent"
+                      app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+      </androidx.cardview.widget.CardView>
 
       <androidx.cardview.widget.CardView
           android:layout_width="79dp"
