--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -73,7 +73,7 @@
         tools:layout="@layout/fragment_sign_up" />
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.example.foodplanner.AccountFragment"
+        android:name="com.example.foodplanner.userDetails.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
     <fragment
