--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/splashScreen">
+    app:startDestination="@id/homeScreen">
 
     <fragment
         android:id="@+id/splashScreen"
@@ -30,7 +30,20 @@
         android:id="@+id/homeScreen"
         android:name="com.example.foodplanner.homeFragment.View.HomeFragment"
         android:label="fragment_home_screen"
-        tools:layout="@layout/fragment_home_screen" />
+        tools:layout="@layout/fragment_home_screen" >
+        <action
+            android:id="@+id/action_homeScreen_to_favoriteFragment"
+            app:destination="@id/favoriteFragment" />
+        <action
+            android:id="@+id/action_homeScreen_to_searchScreen"
+            app:destination="@id/searchScreen" />
+        <action
+            android:id="@+id/action_homeScreen_to_calenderScreen"
+            app:destination="@id/calenderScreen" />
+        <action
+            android:id="@+id/action_homeScreen_to_accountFragment"
+            app:destination="@id/accountFragment" />
+    </fragment>
     <fragment
         android:id="@+id/searchScreen"
         android:name="com.example.foodplanner.search.View.SearchFragment"
