--- a/app/src/main/res/layout/fragment_meal_details.xml
+++ b/app/src/main/res/layout/fragment_meal_details.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="5dp"
     android:layout_marginTop="10dp"
     android:layout_marginRight="5dp"
-    tools:context=".MealDetailsFragment">
+    tools:context=".mealDetails.MealDetailsFragment">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
