--- a/app/src/main/res/layout/ingredients_items.xml
+++ b/app/src/main/res/layout/ingredients_items.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="100dp"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:background="@color/darkGreen"
     android:backgroundTint="@color/darkGreen"
@@ -40,10 +40,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="8dp"
             android:fontFamily="@font/arimo_bold_italic"
             android:text="TextView"
+            android:textAlignment="center"
             android:textColor="@color/darkYellow"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView4" />
