--- a/app/src/main/res/layout/fragment_search_screen.xml
+++ b/app/src/main/res/layout/fragment_search_screen.xml
@@ -85,10 +85,13 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="10dp"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline18" />
+                app:layout_constraintTop_toTopOf="@+id/guideline18">
+
+            </androidx.recyclerview.widget.RecyclerView>
 
             <Button
                 android:id="@+id/cuisineButton"
@@ -129,6 +132,21 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/categoryButton"
                 app:layout_constraintTop_toBottomOf="@+id/searchView" />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/errorAnimation"
+                android:layout_width="341dp"
+
+                android:layout_height="224dp"
+                android:layout_marginBottom="252dp"
+                android:elevation="5dp"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/error" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
