--- a/app/src/main/res/layout/fragment_meal_details.xml
+++ b/app/src/main/res/layout/fragment_meal_details.xml
@@ -72,10 +72,20 @@
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_margin="20dp"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="32dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/baseline_favorite_border_24"
                     app:layout_constraintStart_toStartOf="@+id/guideline12"
+                    app:layout_constraintTop_toTopOf="@+id/guideline13" />
+
+                <Button
+                    android:id="@+id/calenderbtn"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="50dp"
+                    android:background="@drawable/calendar"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/guideline13" />
 
                 <TextView
@@ -84,9 +94,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="32dp"
                     android:fontFamily="@font/arimo_bold_italic"
+                    android:text="TextView"
                     android:textColor="@color/darkYellow"
                     android:textSize="20dp"
-                    android:text="TextView"
                     app:layout_constraintBottom_toTopOf="@+id/guideline13"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/cardView5" />
@@ -96,8 +106,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
-                    android:text="TextView"
                     android:fontFamily="@font/arimo_bold_italic"
+                    android:text="TextView"
                     android:textColor="@color/darkYellow"
                     android:textSize="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
